slight revision to G.1

--- a/tex/modules/6-G/sections/1.tex
+++ b/tex/modules/6-G/sections/1.tex
@@ -382,8 +382,7 @@ other properties of the determinant:
 \end{observation}
 
 \begin{observation}
-Columns may be swapped by adding/subtracting columns from one another,
-which we've just seen doesn't change the determinant.  
+Columns may be swapped by adding/subtracting columns from one another.
 \begin{align*}
   \det([\vec{v}\hspace{1em}\vec{w}])
 &=
@@ -410,8 +409,8 @@ Swapping columns may be thought of as a reflection, which is represented by a ne
 determinant. For example, the following matrices transform the unit square into
 the same parallelogram, but the second matrix reflects its orientation.
 \[
-  A=\begin{bmatrix}2&3\\0&4\end{bmatrix}\hspace{2em}
-  B=\begin{bmatrix}3&2\\4&0\end{bmatrix}
+  A=\begin{bmatrix}2&3\\0&4\end{bmatrix}\hspace{1em}\det A=8\hspace{3em}
+  B=\begin{bmatrix}3&2\\4&0\end{bmatrix}\hspace{1em}\det B=-8
 \]
 \begin{center}
 \begin{tikzpicture}[scale=0.5]
