--- a/tex/modules/6-G/sections/1.tex
+++ b/tex/modules/6-G/sections/1.tex
@@ -157,42 +157,6 @@ or \(\det(A)\) for short, to be the factor by which \(A\) scales areas.  In orde
 \end{center}
 \end{remark}
 
-%\begin{activity}{5}
-%Consider the linear transformation given by the standard matrix
-% $A_3 = \begin{bmatrix} 1 & -1 \\ 1 & 1 \end{bmatrix}$.
-%
-%\begin{enumerate}[(a)]
-%\item Sketch the transformation of the unit square:
-%      the parallelogram given by the columns
-%      \(\begin{bmatrix}1\\1\end{bmatrix}\),
-%      \(\begin{bmatrix}-1\\1\end{bmatrix}\) of the standard matrix.
-%\item Compute the area of the transformed unit square.
-%\end{enumerate}
-%\end{activity}
-%
-%
-%\begin{activity}{5}
-%Consider the linear transformation given by the standard matrix
-% $A_4 = \begin{bmatrix} 0 & 1 \\ 1 & 0 \end{bmatrix}$.
-%
-%\begin{enumerate}[(a)]
-%\item Sketch the transformation of the unit square.
-%\item Compute the area of the transformed unit square.
-%\end{enumerate}
-%\end{activity}
-%
-%\begin{activity}{5}
-%Consider the linear transformation given by the standard matrix
-% $A_5 = \begin{bmatrix} 1 & 1 \\ 0 & 0 \end{bmatrix}$.
-%
-%\begin{enumerate}[(a)]
-%\item Sketch the transformation of the unit square.
-%\item Compute the area of the transformed unit square.
-%\end{enumerate}
-%\end{activity}
-
-
-
 
 \begin{activity}{2}
 The transformation of the unit square by the
@@ -214,7 +178,7 @@ area of the transformed unit square shown here?
     \item 0
     \item 1
     \item 2
-    \item Cannot be determined
+    \item 4
   \end{enumerate}
 \end{activity}
 
@@ -236,7 +200,7 @@ the area of the transformed unit square shown here?
     \item 0
     \item 1
     \item 2
-    \item Cannot be determined
+    \item 4
   \end{enumerate}
 \end{activity}
 
@@ -245,27 +209,25 @@ the area of the transformed unit square shown here?
 The transformations of the unit square by the
 standard matrices \([\vec{v}\hspace{0.5em} \vec{w}]\) and
 \([c\vec{v}\hspace{0.5em} \vec{w}]\) are illustrated below.
-How are $\det([\vec{v}\hspace{0.5em} \vec{w}])$ and $\det([c\vec{v}\hspace{0.5em} \vec{w}])$ related?
+Describe the value of \(\det([c\vec{v}\hspace{0.5em} \vec{w}])\).
 \begin{center}
 \begin{tikzpicture}[scale=0.8]
 \draw[thin,gray,<->] (-1,0)-- (6,0);
 \draw[thin,gray,<->] (0,-1)-- (0,6);
-\draw[very thick,red,->] (0,0) -- node[below right] {$c\vec{v}$}  (4,2);
-\draw[very thick,red,->] (1,3) -- (5,5);
+\draw[thick,red,->] (0,0) -- node[below right] {$c\vec{v}$}  (4,2);
+\draw[thick,red,->] (1,3) -- (5,5);
 \draw[thick,blue,->] (0,0) -- node[below] {$\vec{v}$} (3,1.5);
-\draw[thick,blue,->] (0,0) -- node[left] {$\vec{w}$} (1,3);
+\draw[thick,purple,->] (0,0) -- node[left] {$\vec{w}$} (1,3);
 \draw[lightgray,very thick,dashed] (1,3) -- (2,1);
 \draw[thick,blue,->] (3,1.5) -- (4,4.5);
 \draw[thick,blue,->] (1,3) -- (4,4.5);
-
-
-\draw[thick,blue,->] (4,2) -- (5,5);
+\draw[thick,red,->] (4,2) -- (5,5);
 \end{tikzpicture}
 \end{center}
   \begin{enumerate}[a)]
-    \item $\det([\vec{v}\hspace{0.5em} \vec{w}])=\det([c\vec{v}\hspace{0.5em} \vec{w}])$
-    \item $c+\det([\vec{v}\hspace{0.5em} \vec{w}])=\det([c\vec{v}\hspace{0.5em} \vec{w}])$
-    \item $c\det([\vec{v}\hspace{0.5em} \vec{w}])=\det([c\vec{v}\hspace{0.5em} \vec{w}])$
+    \item \(\det([\vec{v}\hspace{0.5em} \vec{w}])\)
+    \item \(\det([\vec{v}\hspace{0.5em} \vec{w}])+c\)
+    \item \(c\det([\vec{v}\hspace{0.5em} \vec{w}])\)
   \end{enumerate}
 \end{activity}
 
@@ -273,17 +235,16 @@ How are $\det([\vec{v}\hspace{0.5em} \vec{w}])$ and $\det([c\vec{v}\hspace{0.5em
 The transformations of unit squares by the
 standard matrices \([\vec{u}\hspace{0.5em} \vec{w}]\), \([\vec{v}\hspace{0.5em} \vec{w}]\) and
 \([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}]\) are illustrated below.
-How is $\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])$ related to
-$\det([\vec{u}\hspace{0.5em} \vec{w}])$ and $\det([\vec{v}\hspace{0.5em} \vec{w}])$?
+Describe the value of \(\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])\).
 \begin{center}
 \begin{tikzpicture}[scale=0.8]
 \draw[thin,gray,<->] (-1,0)-- (6,0);
 \draw[thin,gray,<->] (0,-1)-- (0,6);
 \draw[thick,blue,->] (0,0) -- node[below] {$\vec{u}$} (2,1);
-\draw[thick,blue,->] (0,0) -- node[left] {$\vec{w}$} (1,3);
+\draw[thick,purple,->] (0,0) -- node[left] {$\vec{w}$} (1,3);
 \draw[thick,blue,->] (2,1) -- node [below] {$\vec{v}$}(3,2);
-\draw[thick,blue,->] (2,1) -- (3,4);
-\draw[thick,blue,->] (3,2) -- (4,5);
+\draw[thick,purple,->] (2,1) -- (3,4);
+\draw[thick,purple,->] (3,2) -- (4,5);
 \draw[thick,blue,->] (1,3) -- (3,4);
 \draw[thick,blue,->] (3,4) -- (4,5);
 \draw[thick,red,->] (0,0) --  (3,2)node[above,right] {$\vec{u}+\vec{v}$};
@@ -292,11 +253,11 @@ $\det([\vec{u}\hspace{0.5em} \vec{w}])$ and $\det([\vec{v}\hspace{0.5em} \vec{w}
 \end{center}
   \begin{enumerate}[a)]
     \item
-    $\det([\vec{u}\hspace{0.5em} \vec{w}])=\det([\vec{v}\hspace{0.5em} \vec{w}])=\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])$
+    \(\det([\vec{u}\hspace{0.5em} \vec{w}])=\det([\vec{v}\hspace{0.5em} \vec{w}])\)
     \item
-    $\det([\vec{u}\hspace{0.5em} \vec{w}])+\det([\vec{v}\hspace{0.5em} \vec{w}])=\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])$
+    \(\det([\vec{u}\hspace{0.5em} \vec{w}])+\det([\vec{v}\hspace{0.5em} \vec{w}])\)
     \item
-    $\det([\vec{u}\hspace{0.5em} \vec{w}])\det([\vec{v}\hspace{0.5em} \vec{w}])=\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])$
+    \(\det([\vec{u}\hspace{0.5em} \vec{w}])\det([\vec{v}\hspace{0.5em} \vec{w}])\)
   \end{enumerate}
 \end{activity}
 
@@ -322,24 +283,6 @@ Note that these last two properties together can be phrased as ``The determinant
 
 \end{definition}
 
-% \begin{activity}{5}
-% True or false: \(\det([\vec{v}\hspace{0.5em}\vec{v}+\vec{w}]) =
-% \det([\vec{v}\hspace{0.5em}\vec{w}])\).
-%
-% \begin{center}
-% \begin{tikzpicture}
-% \draw[thin,gray,<->] (-1,0)-- (8,0);
-% \draw[thin,gray,<->] (0,-1)-- (0,5);
-% \draw[very thick,blue,->] (0,0) -- node[below right] {$\vec{v}$}  (3,1);
-% \draw[very thick,blue,->] (0,0) -- node[left] {$\vec{w}$} (1,2);
-% \draw[dashed,blue,->] (1,2) -- (4,3);
-% \draw[dashed,blue,->] (3,1) -- (4,3);
-% \draw[thick,red,->] (0,0) --  (4,3)node[above left] {$\vec{v}+\vec{w}$};
-% \draw[dashed,red,->] (3,1) -- (7,4);
-% \draw[dashed,red,->] (4,3) -- (7,4);
-% \end{tikzpicture}
-% \end{center}
-% \end{activity}
 
 \begin{observation}
 The determinant must also satisfy other properties.
@@ -381,29 +324,6 @@ other properties of the determinant:
   \end{align*}
 \end{observation}
 
-\begin{observation}
-Columns may be swapped by adding/subtracting columns from one another.
-\begin{align*}
-  \det([\vec{v}\hspace{1em}\vec{w}])
-&=
-  \det([\vec{v}+\vec{w}\hspace{1em}\vec{w}])
-\\ &=
-  \det([\vec{v}+\vec{w}\hspace{1em}\vec{w}-(\vec{v}+\vec{w})])
-\\ &=
-  \det([\vec{v}+\vec{w}\hspace{1em}-\vec{v}])
-\\ &=
-  \det([\vec{v}+\vec{w}-\vec{v}\hspace{1em}-\vec{v}])
-\\ &=
-  \det([\vec{w}\hspace{1em}-\vec{v}])
-\\ &=
-  -\det([\vec{w}\hspace{1em}\vec{v}])
-  \end{align*}
-
-So swapping two columns results in a negation of the
-determinant.  Therefore, determinants represent a \textit{signed} area, since they are not always
-positive.
-\end{observation}
-
 \begin{remark}
 Swapping columns may be thought of as a reflection, which is represented by a negative
 determinant. For example, the following matrices transform the unit square into
@@ -440,6 +360,26 @@ the same parallelogram, but the second matrix reflects its orientation.
 \end{remark}
 
 
+\begin{observation}
+The fact that swapping columns multiplies determinants by a negative
+may be verified by adding and subtracting columns.
+\begin{align*}
+  \det([\vec{v}\hspace{1em}\vec{w}])
+&=
+  \det([\vec{v}+\vec{w}\hspace{1em}\vec{w}])
+\\ &=
+  \det([\vec{v}+\vec{w}\hspace{1em}\vec{w}-(\vec{v}+\vec{w})])
+\\ &=
+  \det([\vec{v}+\vec{w}\hspace{1em}-\vec{v}])
+\\ &=
+  \det([\vec{v}+\vec{w}-\vec{v}\hspace{1em}-\vec{v}])
+\\ &=
+  \det([\vec{w}\hspace{1em}-\vec{v}])
+\\ &=
+  -\det([\vec{w}\hspace{1em}\vec{v}])
+  \end{align*}
+\end{observation}
+
 
 
 \begin{fact}
@@ -469,19 +409,35 @@ the same parallelogram, but the second matrix reflects its orientation.
   \(4\), and the transformation given by the standard matrix \(B\) scales
   areas by \(3\). By what factor does the transformation given by the standard matrix
   \(AB\) scale areas?
+
+\begin{center}
+\begin{tikzpicture}[x=0.2in,y=0.2in]
+\begin{scope}
+\fill[red] (0,0) -- (1,0) -- (1,1) -- (0,1) -- (0,0);
+\end{scope}
+\draw[->,thick] (2,1) to[bend left=30] node[above] {\(B\)} (3,1);
+\begin{scope}[shift={(3,-1)}]
+\fill[purple] (0,0) -- (2,1) -- (3,3) -- (1,2) -- (0,0);
+\end{scope}
+\draw[->,thick] (6.5,1) to[bend left=30] node[above] {\(A\)} (7.5,1);
+\begin{scope}[shift={(12,-3)}]
+\fill[blue] (0,0) -- (-4,5) -- (-1,7) -- (3,2) -- (0,0);
+\end{scope}
+\end{tikzpicture}
+\end{center}
+
   \begin{enumerate}[(a)]
   \item \(1\)
   \item \(7\)
   \item \(12\)
   \item Cannot be determined
   \end{enumerate}
-
 \end{activity}
 
 \begin{fact}
 Since the transformation given by the standard matrix \(AB\) is obtained
 by applying the transformations given by \(A\) and \(B\), it follows that 
-\[\det(AB)=\det(A)\det(B)\]
+\[\det(AB)=\det(A)\det(B)=\det(B)\det(A)=\det(BA)\]
 \end{fact}
 
 \begin{remark}
