--- a/tex/modules/2-V/sections/0.tex
+++ b/tex/modules/2-V/sections/0.tex
@@ -3,23 +3,22 @@
 
 \begin{applicationActivities}
 
-%TODO add in this observation to better motivate next activity
-%\begin{observation}
-%Several properties of the real numbers, such as commutivity:
-%\[
-%  x + y = y + x
-%\]
-%also hold for Eudlicean vectors with multiple components:
-%\[
-%\begin{bmatrix}x_1\\x_2\end{bmatrix}
-%+
-%\begin{bmatrix}y_1\\y_2\end{bmatrix}
-%=
-%\begin{bmatrix}y_1\\y_2\end{bmatrix}
-%+
-%\begin{bmatrix}x_1\\x_2\end{bmatrix}
-%\]
-%\end{observation}
+\begin{observation}
+Several properties of the real numbers, such as commutivity:
+\[
+  x + y = y + x
+\]
+also hold for Eudlicean vectors with multiple components:
+\[
+\begin{bmatrix}x_1\\x_2\end{bmatrix}
++
+\begin{bmatrix}y_1\\y_2\end{bmatrix}
+=
+\begin{bmatrix}y_1\\y_2\end{bmatrix}
++
+\begin{bmatrix}x_1\\x_2\end{bmatrix}
+\]
+\end{observation}
 
 \begin{activity}{20}\smallSlideText
 Consider each of the following properties of the real numbers
