--- a/tex/modules/2-V/sections/7.tex
+++ b/tex/modules/2-V/sections/7.tex
@@ -219,32 +219,28 @@
     \end{bmatrix}
   \]
 \end{observation}
-%%TODO uncomment
-%
-%\begin{activity}{5}
-%Suppose \(W\) is a subspace of \(\P^8\), and you know that
-%% the set \(\{ x^3+x, x^2+1, x^4-x \}\) is a linearly independent subset of \(W\).
-%it contains a \textbf{linearly independent} set of \(3\) vectors.
-%What can you conclude about \(W\)?
-%\begin{enumerate}[(a)]
-%\item The dimension of \(W\) is at most 3.
-%\item The dimension of \(W\) is exactly 3.
-%\item The dimension of \(W\) is at least 3.
-%\end{enumerate}
-%\end{activity}
-%
-%\begin{activity}{5}
-%Suppose \(W\) is a subspace of \(\P^8\), and you know that
-%% \(W\) is spanned by the six vectors \[\{ x^4-x,x^3+x,x^3+x+1,x^4+2x,x^3,2x+1\}\]
-%% Without doing any calculation,
-%it contains a \textbf{spanning set} of \(3\) vectors.
-%What can you conclude about \(W\)?
-%\begin{enumerate}[(a)]
-%\item The dimension of \(W\) is at most 3.
-%\item The dimension of \(W\) is exactly 3.
-%\item The dimension of \(W\) is at least 3.
-%\end{enumerate}
-%\end{activity}
+
+\begin{activity}{5}
+Suppose \(W\) is a subspace of \(\P^8\), and you know that
+ the set \(\{ x^3+x, x^2+1, x^4-x \}\) is a linearly independent subset of \(W\).
+What can you conclude about \(W\)?
+\begin{enumerate}[(a)]
+\item The dimension of \(W\) is at most 3.
+\item The dimension of \(W\) is exactly 3.
+\item The dimension of \(W\) is at least 3.
+\end{enumerate}
+\end{activity}
+
+\begin{activity}{5}
+Suppose \(W\) is a subspace of \(\P^8\), and you know that
+ \(W\) is spanned by the six vectors \[\{ x^4-x,x^3+x,x^3+x+1,x^4+2x,x^3,2x+1\}.\]
+What can you conclude about \(W\)?
+\begin{enumerate}[(a)]
+\item The dimension of \(W\) is at most 6.
+\item The dimension of \(W\) is exactly 6.
+\item The dimension of \(W\) is at least 6.
+\end{enumerate}
+\end{activity}
 
 \begin{observation}
   The space of polynomials \(\P\) (of \textit{any} degree)
