add linebreak to exercise for import to sbg-rails

--- a/tex/modules/2-V/exercises/V2.tex
+++ b/tex/modules/2-V/exercises/V2.tex
@@ -36,7 +36,8 @@ Determine if \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combinati
 Since this system has a solution,  \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combination of the three vectors.
 \end{solution}
 
-\begin{problem}{V3} Determine if \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combination of the vectors \(\begin{bmatrix} 3 \\ 0 \\ -1 \end{bmatrix}\), \(\begin{bmatrix} 1 \\ -1 \\ 4 \end{bmatrix}\), and \(\begin{bmatrix} 5 \\ 1 \\  -6 \end{bmatrix}\).
+\begin{problem}{V3} 
+Determine if \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combination of the vectors \(\begin{bmatrix} 3 \\ 0 \\ -1 \end{bmatrix}\), \(\begin{bmatrix} 1 \\ -1 \\ 4 \end{bmatrix}\), and \(\begin{bmatrix} 5 \\ 1 \\  -6 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
 \[\RREF\left(\begin{bmatrix}[ccc|c] 3 & 1 & 5 & 1 \\ 0 & -1 & 1 & 4 \\ -1 & 4 & -6 & 3 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 0 & 2 & 0 \\ 0 & 1 & -1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}\]
