--- a/tex/modules/5-M/exercises/M2.tex
+++ b/tex/modules/5-M/exercises/M2.tex
@@ -1,6 +1,6 @@
 \begin{problem}{M2}
 Consider the two row operations 
-\(R_2-4R_1\to R_2\) and \(\frac{1}{3}R_2\to R_2\)
+\(R_2-4R_1\to R_2\) and \(-\frac{1}{3}R_2\to R_2\)
 applied as follows to show \(A\sim B\):
 \begin{align*}
 A
