Update facilitator notes

--- a/tex/facilitator-notes.tex
+++ b/tex/facilitator-notes.tex
@@ -27,19 +27,19 @@ The course consists of 6 modules, listed below; here they are optimized for 27 7
 \subsection*{Module 1-E: Systems of Linear Equations}
 This module explores how to solve arbitrarily large systems of linear equations.  We emphasize how to write the solution set using set-builder notation, and introduce the students to CoCalc (using the Octave kernel) to perform computation.  The choice of Octave here is somewhat arbitrary but motivated by request of our engineering faculty, who use Matlab; instructors are encouraged to adapt the materials to use the technology best suited to their instructional context.  
 
-RAT answers (IF-AT card B005, 1-10):
+RAT answers (IF-AT card B002, 1-10):
 \begin{multicols}{10}
 \begin{enumerate}[1)]
-\item C
 \item A
-\item D
-\item D
 \item B
-\item A
-\item A
-\item C
 \item D
+\item C
 \item B
+\item B
+\item C
+\item B
+\item D
+\item D
 \end{enumerate}
 \end{multicols}
 
@@ -51,26 +51,26 @@ This is a half day, as the first RAT typically only takes a half hour, leaving a
 We begin this part by quickly introducing augmented matrix notation.  We then begin building fluency in this new language through activity E.1.5; here, the instructor is advised to encourage students to think about what the matrix operation means for the corresponding system of equations.  We list 10 minutes for team's working on this activity, but we often spend another 5 minutes in intra-team discussion as well.  E.1.7 introduces the students to the Gauss-Jordan algorithm; rather than belabor this in class, we provide extra videos and emphasize to students that this particular skill is to be learned and practiced in the individual space.  This allows us to go ahead and begin using technology in the next part.
 
 \subsubsection*{Part 2}
-This part begins getting students familiar with the CoCalc environment (we note that other instructional contexts may call for different choices in technology).  After getting the technology running and using it to solve a couple systems with no or one solution, we then explore the difference between free and bound variables in Activity E.2.6.
+This part begins getting students familiar with an online computational environment emulating Matlab (we note that other instructional contexts may call for different choices in technology).  After getting the technology running and using it to solve a couple systems with no or one solution, we then explore the difference between free and bound variables in Activity E.2.6.
 
 
 \subsection*{Module 2-V: Introduction to vector spaces}
-This module introduces students to abstract vector spaces.  After a motivating activity in part 0, we define vector spaces in part 1, characterizing them as ``things that act like Euclidean spaces''.  The notion of linear combinations and span are introduced and explored through parts 2 and 3, frequently working with vector spaces such as polynomials and matrices after initial examples about Euclidean spaces.  Part 4 introduces the important notion of a subspace.
+This module introduces students to abstract vector spaces.  After a motivating activity in part 0, we define vector spaces in part 1, characterizing them as ``things that act like Euclidean spaces''.  The notion of linear combinations and span are introduced and explored through parts 2 and 3, frequently working with vector spaces such as polynomials and matrices after initial examples about Euclidean spaces.  Part 4 introduces the important notion of a subspace.  Part 5 introduces linear independence, and Part 6 introduces the definition of a basis.  The final section ties a lot of these ideas together and explores how to efficiently describe a subspace by computing a basis.
 
-RAT answers (IF-AT card B005, 11-20):
+RAT answers (IF-AT card B002, 11-20):
 \begin{multicols}{10}
 \begin{enumerate}[1)]
 \setcounter{enumi}{10}
 \item C
-\item C
 \item A
-\item C
 \item A
-\item C
-\item B
-\item B
 \item B
 \item C
+\item C
+\item D
+\item D
+\item D
+\item B
 \end{enumerate}
 \end{multicols}
 
@@ -84,56 +84,38 @@ The definition of a vector space is introduced here, as anything satisfying the 
 Building on students' geometric intuition of span from the previous part, we begin by exploring how to algebraically answer questions about span by solving systems of equations.  Students often have trouble writing down the matrices in 2.6 and 2.7, often wanting to write the transpose, or somehow concatenating matrices in 2.7; instructors are advised to emphasize the parallels with how Euclidean vectors translate into matrices.
 
 \subsubsection*{Part 3}
-We continue our exploration of span by addressing the question of when a set of vectors spans the entire vector space.  We hint at the notion of dimension in the first two activities, which is introduced rigorously in Module 3-S.  In addition to asking these questions about Euclidean vectors, we also include activities again on polynomials and matrices, emphasizing the natural isomorphism to Euclidean space (in as many words).  
+We continue our exploration of span by addressing the question of when a set of vectors spans the entire vector space.  We hint at the notion of dimension in the first two activities, which is introduced rigorously in Part 6.  In addition to asking these questions about Euclidean vectors, we also include activities again on polynomials and matrices, emphasizing the natural isomorphism to Euclidean space (in as many words).  
 
 \subsubsection*{Part 4}
 This section introduces subspaces, typically a very tricky concept for students.  Several examples are presented as activities with decreasing amounts of scaffolding.
 
-\subsection*{Module 3-S: Structure of vector spaces}
-This module is a further exploration of the structure of vector spaces.  Instructors pressed for time could combine this with the previous module and omit the readiness assurance for this module.  The key idea introduced is that of linear independence, which leads to the notion of a basis.  
+\subsubsection*{Part 5}
+This section introduces the notion of linear independence, motivated by trying to describe a subspace as efficiently as possible.  Students explore how to test for linear independence in 5.3.  Activities 5.9-5.11 presage the notion of dimension.  
 
-RAT answers (IF-AT card B005, 21-30):
-\begin{multicols}{10}
-\begin{enumerate}[1)]
-\setcounter{enumi}{20}
-\item D
-\item D
-\item A
-\item C
-\item B
-\item B
-\item B
-\item C
-\item C
-\item A
-\end{enumerate}
-\end{multicols}
-\subsubsection*{Part 1}
-This section introduces the notion of linear independence, motivated by trying to describe a subspace as efficiently as possible.  Students explore how to test for linear independence in 1.3.  Activities 1.9-S.1.11 presage the notion of dimension.  
+\subsubsection*{Part 6}
+This part introduces students to the vocabulary to go along with their intuition developed in Part 5, namely the definition of a basis.  Activity 6.10 gives some students trouble, as they are tempted to insert the polynomials into a matrix as rows rather than columns.  The instructor is advised to use the reporting phase to draw students' attention to the parallels with the previous activity; in most classes, at least one team will have made this observation and just needs a small prompt to explain to the rest of the class.  
 
-\subsubsection*{Part 2}
-This part introduces students to the vocabulary to go along with their intuition developed in Part 1, namely the definitions of basis and subspace.  Activity 2.10 gives some students trouble, as they are tempted to insert the polynomials into a matrix as rows rather than columns.  The instructor is advised to use the reporting phase to draw students' attention to the parallels with the previous activity; in most classes, at least one team will have made this observation and just needs a small prompt to explain to the rest of the class.  
+\subsubsection*{Part 7}
+This section ties the previous two together by illuminating to students that the answer to the question of ``How can we efficiently describe a subspace'' is to compute a basis.  Activity 7.2 is meant to highlight that (nontrivial) subspaces have (infinitely) many bases.  Instructors are advised to comment when discussing Fact 7.4 that a simple argument on the size of a matrix shows that two bases of a finite dimensional vector space have the same size.  We then give students the definition of dimension, and point out how it matches their geometric intuition.  Activity 7.12 walks students through computing a basis of the solution space of a homogeneous system of equations; this arises naturally in Module A (in computing the kernel of a linear transformation) and in Module G (in computing an eigenspace).  Activities 7.15 and 7.16 usually elicit a lively inter-team discussion, as students' understanding of linear independence and span is still in a formative stage at this point.
 
-\subsubsection*{Part 3}
-This section ties the previous two together by illuminating to students that the answer to the question of ``How can we efficiently describe a subspace'' is to compute a basis.  Activity 3.2 is meant to highlight that (nontrivial) subspaces have (infinitely) many bases.  Instructors are advised to comment when discussing Fact 3.4 that a simple argument on the size of a matrix shows that two bases of a finite dimensional vector space have the same size.  We then give students the definition of dimension, and point out how it matches their geometric intuition.  Activity 3.12 walks students through computing a basis of the solution space of a homogeneous system of equations; this arises naturally in Module A (in computing the kernel of a linear transformation) and in Module G (in computing an eigenspace).  Activities 3.15 and 3.16 usually elicit a lively inter-team discussion, as students' understanding of linear independence and span is still in a formative stage at this point.
 
 \subsection*{Module 4-A: Algebraic properties of linear maps}
 This module introduces the fundamental notion of a linear transformation, and studies them from an algebraic perspective.   Part 1 is entirely devoted to allowing students to grapple with the definition.  In section 2, students discover how a linear map is completely determined by its action on a basis, and we introduce the (nonstandard) definition of a standard matrix.  Parts 3 and 4 are devoted to exploring the notions of injectivity and surjectivity.
 
-RAT answers (IF-AT card B005, 31-40):
+RAT answers (IF-AT card B002, 21-30):
 \begin{multicols}{10}
 \begin{enumerate}[1)]
-\setcounter{enumi}{30}
+\setcounter{enumi}{20}
+\item B
 \item A
-\item B
-\item B
-\item D
 \item C
-\item D
+\item C
 \item B
 \item D
-\item D
+\item B
 \item C
+\item A
+\item A
 \end{enumerate}
 \end{multicols}
 \subsubsection*{Part 1}
@@ -152,20 +134,20 @@ This section is devoted to a deeper study of injectivity and surjectivity.  Acti
 This module introduces students to matrix multiplication and invertible matrices, motivated through the lens of linear transformations.  Many students at this level have seen matrix multiplication in an algorithmic sense (i.e. compute the dot product of rows with columns); while in the past we mentioned this technique, we now avoid this in favor of emphasizing that the raison d'\^{e}tre of matrix multiplication is the composition of linear transformations.  This change in approach led to a doubling in student success on their first assessment of matrix multiplication.
 
 
-RAT answers (IF-AT card B005, 41-50):
+RAT answers (IF-AT card B002, 31-40):
 \begin{multicols}{10}
 \begin{enumerate}[1)]
-\setcounter{enumi}{40}
-\item B
-\item B
+\setcounter{enumi}{30}
+\item A
 \item C
-\item B
 \item C
 \item A
 \item D
-\item A
 \item C
 \item B
+\item C
+\item B
+\item D
 \end{enumerate}
 \end{multicols}
 
@@ -183,18 +165,19 @@ This part is devoted to the notion of invertibility.  Activity 3.1 is a callback
 
 This module explores the geometric properties of linear transformations, focusing on determinants, eigenvalues, and eigenvectors.  The readiness assurance outcomes include some basic high school geometry and algebra, as well as some outcomes of earlier modules concerning the algebraic properties of linear transformations.  The first two days are devoted to determinants, while the next two explore eigenvalues and eigenvectors.  The last day focuses on on a popular application of eigenvectors, namely Google's PageRank algorithm.
 
-RAT answers (IF-AT card D012):
+RAT answers (IF-AT card B002, 41-50):
 \begin{multicols}{10}
 \begin{enumerate}[1)]
-\item A
-\item A
+\setcounter{enumi}{40}
 \item D
+\item B
+\item B
+\item D
+\item A
 \item C
-\item A
 \item D
-\item B
-\item B
 \item A
+\item B
 \item A
 \end{enumerate}
 \end{multicols}
